# omp-samp-bigint

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  bigint_common.hpp  main.cpp  samp_plugin.h
